[metadata]
name = dewloosh
version = 0.0.1
author = dewloosh
author_email = dewloosh@gmail.com
description = A collection of tools for common developer utility
url = https://github.com/dewloosh/dewloosh
download_url = https://github.com/dewloosh/dewloosh/archive/refs/tags/0_0_1.zip, 
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src